Correccion asignarPista